[package]
name = "rkyv-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecheck = { version = "0.6", default-features = false }
rkyv = { version = "0.7", default-features = false, features = ["strict", "validation", "size_32"] }
hex = "0.4"
